# nunchaku

./: .dune-workspace  .gitignore  .header  .merlin  .ocamlinit  .ocp-indent  .travis.yml  Makefile  OMakefile  README.adoc  _oasis  _oasis_build.om  _oasis_hier.om  _oasis_install.om  _oasis_setup.om  _tags  description_operators.html  done.txt  higher_order.md  index.adoc  index.html  index.md  inductive_pred.adoc  inductive_pred.md  input_lang.html  input_lang.md  model_syntax.md  myocamlbuild.ml  nunchaku.native  nunchaku.odocl  nunchaku.opam  opam  pipeline.md  setup.ml  summary.html  todo.md  todo.txt
0.3/: Ast_kodkod.html  Cardinality.Z.html  ElimMultipleEqns.html  ElimPatternMatch.html  ElimRecursion.html  Elim_HOF.html  Env.Print.html  FO.Of_tptp.html  FO.TyBuiltin.html  ID.Map.html  ID.Set.html  Intf.html  Lazy_list.Infix.html  Lazy_list.html  Lexer.html  MetaVar.html  Model.Default.html  Parse_tip.html  Parser.html  Parsing_utils.A.html  Pattern.S.T.html  Pattern.TI.html  Polarity.html  Problem.Convert.html  Scheduling.Fut.html  Scheduling.Task.html  Sexp_lib.Decoder.html  Skolem.html  Statement.html  TermInner.BUILD.html  TermInner.Binder.html  TermInner.Convert.html  TermInner.Default.P.html  TermInner.REPR.html  TermInner.UTIL.Tbl.html  TermInner.Util.Tbl.html  TermInner.UtilRepr.html  TermInner.html  TermMono.Make.T.html  TermMono.Make.html  (+104 more)
0.5/: Bit_set.Make.html  Bit_set.S.html  Bit_set.html  Cardinal_encode.Make.html  Cardinal_encode.S.T.html  Cardinality.html  Elim_HOF.html  Elim_infinite.html  Elim_prop_args.html  FO.Builtin.html  FO.T.html  FO.Ty.html  ID.Erase.html  ID.html  Intf.EQ.html  Intf.HASH.html  Intf.PRINT.html  Lift_undefined.html  Model.DT_util.html  Monomorphization.html  Parser.html  Parsing_utils.E.html  Parsing_utils.Loc.html  Pattern.Builtin.html  Pattern.Make.html  Pattern.html  Precedence.html  Prelude.html  Problem.html  Reduce.Make.Full.html  Scheduling.Fut.html  Scheduling.html  Statement.PRINT_TERM.html  TPTP_lexer.html  TPTP_model_ast.Fmt.html  TPTP_model_lexer.html  TPTP_parser.html  TermInner.BUILD.html  TermInner.Convert.html  TermInner.Print.html  (+99 more)
0.6/: index.html
bench/: Makefile  (+1 more)
qtest/: Makefile  dune  jbuild  run_qtest.qtestpack
src/backends/: CVC4.ml  CVC4.mli  Cvc5.ml  Cvc5.mli  Kodkod.ml  Kodkod.mli  Paradox.ml  Paradox.mli  Smbc.ml  Smbc.mli  _oasis_build.om  _oasis_install.om  dune  jbuild  nunchaku_backends.mllib  nunchaku_backends.mlpack
src/core/: AnalyzeType.ml  AnalyzeType.mli  Binder.ml  Binder.mli  Bit_set.ml  Bit_set.mli  Builtin.ml  Builtin.mli  CVC4.ml  CVC4.mli  Cardinal_encode.ml  Cardinal_encode.mli  Cardinality.ml  Cardinality.mli  Env.ml  Env.mli  FO.ml  FO.mli  FO_rel.ml  FO_rel.mli  FO_tptp.ml  FO_tptp.mli  ID.ml  ID.mli  Intf.ml  Lazy_list.ml  Lazy_list.mli  Location.ml  Location.mli  META  MetaVar.ml  MetaVar.mli  Model.ml  Model.mli  Pattern.ml  Polarity.ml  Precedence.ml  Prelude.ml  Prelude.mli  Problem.ml  (+102 more)
src/core/terms/: Pattern.ml  TermInner.ml  TermMono.ml  TermPoly.ml  TermTyped.ml  nunTermInner.ml  nunTermMono.ml  nunTermPoly.ml  nunTermTyped.ml
src/core/transformations/: ElimCopy.ml  ElimCopy.mli  ElimHOF.ml  ElimHOF.mli  ElimIndPreds.ml  ElimIndPreds.mli  ElimMultipleEqns.ml  ElimMultipleEqns.mli  ElimPatternMatch.ml  ElimPatternMatch.mli  ElimRecursion.ml  ElimRecursion.mli  IntroGuards.ml  LambdaLift.ml  LambdaLift.mli  Monomorphization.ml  Monomorphization.mli  Polarize.ml  Polarize.mli  Skolem.ml  Specialize.ml  Specialize.mli  TypeInference.ml  TypeInference.mli  Unroll.ml  Unroll.mli  elimIndPreds.ml  elimIndPreds.mli  nunElimMultipleEqns.ml  nunElimMultipleEqns.mli  nunElimPatternMatch.ml  nunElimPatternMatch.mli  nunElimRecursion.ml  nunElimRecursion.mli  nunFlattenEquation.ml  nunFlattenEquation.mli  nunMonomorphization.ml  nunMonomorphization.mli  nunSkolem.ml  nunSkolem.mli  (+2 more)
src/core/types/: TypeMono.ml  TypePoly.ml  nunTypeMono.ml  nunTypePoly.ml
src/main/: OMakefile  _oasis_build.om  _oasis_install.om  const.ml.ab  dune  jbuild  nunchaku.ml  nunchaku_eval.ml  nunchaku_main.ml  pipeline.ml
src/parsers/: Ast_kodkod.ml  Lex_kodkod.mll  Lexer.mli  Lexer.mll  META  Parse_kodkod.mly  Parse_tip.ml  Parse_tip.mli  Parser.mly  Parsing_utils.ml  TPTP_lexer.mll  TPTP_model_ast.ml  TPTP_model_lexer.mll  TPTP_model_parser.mly  TPTP_parser.mly  TPTP_preprocess.ml  TPTP_preprocess.mli  TPTP_print.ml  TPTP_print.mli  Tip_ast.ml  Tip_lexer.mll  Tip_parser.mly  _oasis_build.om  _oasis_hier.om  _oasis_install.om  dune  jbuild  lex_kodkod.mll  nunAST.ml  nunLexer.mli  nunLexer.mll  nunParser.mly  nunParsingUtils.ml  nunPrintTPTP.ml  nunPrintTPTP.mli  nunTPTPLexer.mll  nunTPTPParser.mly  nunTPTPPreprocess.ml  nunTPTPPreprocess.mli  nunTPTPRecursiveParser.ml  (+3 more)
src/transformations/: Cstor_as_fun.ml  Cstor_as_fun.mli  ElimCopy.ml  ElimCopy.mli  ElimData.ml  ElimData.mli  ElimHOF.ml  ElimHOF.mli  ElimIndPreds.ml  ElimIndPreds.mli  ElimMultipleEqns.ml  ElimMultipleEqns.mli  ElimPatternMatch.ml  ElimPatternMatch.mli  ElimQuantifiers.ml  ElimQuantifiers.mli  ElimRecursion.ml  ElimRecursion.mli  ElimTypes.ml  ElimTypes.mli  Elim_HOF.ml  Elim_HOF.mli  Elim_infinite.ml  Elim_infinite.mli  Elim_ite.ml  Elim_ite.mli  Elim_prop_args.ml  Elim_prop_args.mli  FoToRelational.ml  FoToRelational.mli  IntroGuards.ml  IntroGuards.mli  LambdaLift.ml  LambdaLift.mli  Lift_undefined.ml  Lift_undefined.mli  Model_clean.ml  Model_clean.mli  Model_rename.ml  Model_rename.mli  (+22 more)
(+1799 files in other folders)
