opam-version: "1.2"
name: "nunchaku"
version: "dev"
authors: ["Simon Cruanes" "Jasmin Blanchette"]
maintainer: "simon.cruanes.2007@m4x.org"
build: [
    ["jbuilder" "build" "-p" name "-j" jobs]
    ["strip" "nunchaku.native"]
]
build-doc: [ make "doc" ]
build-test: [ "jbuilder" "runtest" "-j" jobs ]
depends: [
    "ocamlfind" {build}
    "jbuilder" {build}
    "containers" { >= "1.0" }
    "menhir" {build}
    "sequence"
    "base-unix"
    "base-threads"
    "num"
    "qtest" {test}
    "qcheck" {test}
    "oUnit" {test}
    "odoc" {doc}
]
homepage: "https://github.com/nunchaku-inria/nunchaku/"
available: [ocaml-version >= "4.02.0"]
dev-repo: "https://github.com/nunchaku-inria/nunchaku.git"
bug-reports: "https://github.com/nunchaku-inria/nunchaku/issues"
