opam-version: "2.0"
name: "nunchaku"
version: "0.5.1"
synopsis: "A counter-example finder for higher-order logic"
authors: ["Simon Cruanes" "Jasmin Blanchette"]
maintainer: "simon.cruanes.2007@m4x.org"
build: [
    ["jbuilder" "build" "-p" name "-j" jobs]
    ["strip" "_build/default/src/main/nunchaku.exe"]
    ["jbuilder" "build" "@doc" "-p" name] {with-doc}
    ["jbuilder" "runtest" "-p" name "-j" jobs ] {with-test}
]
depends: [
    "jbuilder" {build}
    "containers" { >= "1.0" }
    "menhir" {build}
    "sequence" { >= "1.0" }
    "base-unix"
    "base-threads"
    "num"
    "qtest" {with-test}
    "qcheck" {with-test}
    "ounit" {with-test}
    "odoc" {with-doc}
    "ocaml" { >= "4.02.0" }
]
homepage: "https://github.com/nunchaku-inria/nunchaku/"
dev-repo: "git+https://github.com/nunchaku-inria/nunchaku.git"
bug-reports: "https://github.com/nunchaku-inria/nunchaku/issues"
