opam-version: "2.0"
name: "nunchaku"
version: "0.6"
authors: ["Simon Cruanes" "Jasmin Blanchette"]
maintainer: "simon.cruanes.2007@m4x.org"
synopsis: "A counter-example finder for higher-order logic, designed to be used from various proof assistants"
build: [
    ["dune" "build" "-p" name "-j" jobs]
    ["strip" "_build/default/src/main/nunchaku.exe"]
    ["dune" "build" "@doc"  "-p" name] {with-doc}
    ["dune" "runtest" "-j" jobs "-p" name] {with-test}
]
depends: [
    "dune" {build & >= "1.1" }
    "containers" { >= "1.0" }
    "menhir" {build}
    "iter" { >= "1.0" }
    "base-unix"
    "base-threads"
    "num"
    "qtest" {with-test}
    "qcheck" {with-test}
    "ounit" {with-test}
    "odoc" {with-doc}
    "ocaml" {>= "4.03.0"}
]
homepage: "https://github.com/nunchaku-inria/nunchaku/"
dev-repo: "git+https://github.com/nunchaku-inria/nunchaku.git"
bug-reports: "https://github.com/nunchaku-inria/nunchaku/issues"
