(rule
 (targets run_qtest.ml)
 (deps
  Makefile
  (source_tree ../src))
 (mode fallback)
 ;(libraries (qtest qcheck))
 (action
  (run make qtest-gen)))

(executable
 (name run_qtest)
 (flags :standard -w -33 -warn-error -3)
 (libraries containers nunchaku nunchaku.parsers nunchaku.transformations
   nunchaku.random ounit2 qcheck))

(alias
 (name runtest)
 (deps run_qtest.exe)
 (action
  (run %{deps})))
